# solana-program-rosetta

./: .gitignore  Cargo.toml  README.md  install-solana.sh  test-zig-elf2sbpf.sh  test-zig-sdk.sh
.github/workflows/: main.yml
cpi/pinocchio/: Cargo.toml
cpi/pinocchio/src/: lib.rs
cpi/zig/: build.zig  build.zig.zon  main.zig
cpi/zig-elf2sbpf/: build.zig  build.zig.zon  main.zig
cpi/zig-sdk/: build.zig  build.zig.zon  main.zig
helloworld/zig/: build.zig  build.zig.zon  main.zig
helloworld/zig-elf2sbpf/: build.zig  build.zig.zon
helloworld/zig-sdk/: build.zig  build.zig.zon  main.zig
pubkey/zig/: build.zig  build.zig.zon  main.zig
pubkey/zig-elf2sbpf/: build.zig  build.zig.zon
pubkey/zig-sdk/: build.zig  build.zig.zon  main.zig
token/zig/: build.zig  build.zig.zon
token/zig-elf2sbpf/: build.zig  build.zig.zon
token/zig-elf2sbpf/src/: id.zig  instruction.zig  main.zig  state.zig
token/zig/src/: error.zig  id.zig  instruction.zig  main.zig  state.zig
transfer-lamports/pinocchio/: Cargo.toml
transfer-lamports/pinocchio/src/: entrypoint.rs
transfer-lamports/zig/: build.zig  build.zig.zon  main.zig
transfer-lamports/zig-elf2sbpf/: build.zig  build.zig.zon
transfer-lamports/zig-sdk/: build.zig  build.zig.zon  main.zig
